--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,56 @@
   }
 } */
 
+@font-face {
+  font-family: "bruney";
+  src: url("/fonts/ss-bruney.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Luxenta";
+  src: url("/fonts/lucenta/Luxenta-Regular.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+  font-family: "Luxenta", sans-serif;
+}
+
+.setbackground {
+  position: relative;
+  background-image: url("/images/empty-wooden-table-platform-blurred-600nw-2296351353.webp");
+  background-size: cover;
+  background-position: center;
+  overflow: visible; /* Important */
+}
+
+.setbackground::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: inherit;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.3;
+  z-index: 0;
+}
+
+.setbackground > * {
+  position: relative;
+  z-index: 10;
+}
+
+
+.imageBG_design{
+  height: 900px;
+  transform: rotate(40deg);
 }
